--- a/src/app/pages/configuraciones/configuraciones.component.html
+++ b/src/app/pages/configuraciones/configuraciones.component.html
@@ -1,39 +1,75 @@
-<div class="bg-gray-100 flex justify-center items-center  h-screen container mx-auto p-0">
-  <div class="px-6 py-5 bg-white h-[80vh] w-[800px] border-0 shadow-lg sm:rounded-3xl">
-    <form [formGroup]="myForm" class="my-2 h-[100%]">
-      <div class="flex flex-col justify-between items-center h-[95%] gap-2">
+<main class="container main py-5 mx-auto">
+  <h1>Configuraciones</h1>
 
+  <section class="bg-white border-0 shadow-lg rounded p-4">
+    <form [formGroup]="formConfiguraciones" class="form">
 
-        <mat-card appearance="outlined" class="h-[80px] flex items-center justify-center" >
-          <mat-card-content>
-            <table>
-              <tr>
-                <td><img src="./assets/img/settings.png" class="mb-2 h-[64px] w-[64px]" alt="Logo"></td>
-                <td><h1 class="text-3xl text-[#414141] mb-4">CONFIGURACIONES</h1></td>
-              </tr>
-            </table>
-          </mat-card-content>
-        </mat-card>
+      <div class="form__row">
+        <h3>Sincronización <small>(minutos)</small></h3>
+      </div>
 
-        <mat-form-field class="w-full" >
-          <mat-label>Modulos</mat-label>
-          <mat-select class="h-[30px] mat-mdc-select" formControlName="modulo" (selectionChange)="selectedValue_modulo()">
-            <mat-option *ngFor="let modulo of modulos" [value]="modulo.nombre">{{modulo.nombre}}</mat-option>
-          </mat-select>
-          @if( isValidField('modulo') ) {
-          <mat-error class="text-red-500">
-            {{ getFieldError("modulo") }}
-          </mat-error>
-          }
-        </mat-form-field>
+      <div class="form__row">
+        <!-- Intervalo general -->
+        <div class="form__row__item">
+          <mat-form-field appearance="fill" class="w-full">
+            <mat-label>Intervalo general</mat-label>
+            <input matInput formControlName="syncInterval" type="number">
+          </mat-form-field>
+          <mat-slide-toggle formControlName="enableSyncInterval">Activar</mat-slide-toggle>
+        </div>
 
-        <button (click)="onSubmit()"
-            class="rounded-full w-full flex flex-row justify-center items-center bg-blue-500 hover:bg-blue-600 text-xs text-white text-center font-bold p-2 focus:outline-none focus:ring-2 focus:ring-blue-500 disabled:opacity-50 disabled:cursor-not-allowed">
-            <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-device-floppy"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M6 4h10l4 4v10a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2v-12a2 2 0 0 1 2 -2" /><path d="M12 14m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0" /><path d="M14 4l0 4l-6 0l0 -4" /></svg>
-            GUARDAR
+        <!-- Intervalo CURP -->
+        <div class="form__row__item">
+          <mat-form-field appearance="fill" class="w-full">
+            <mat-label>Intervalo CURP</mat-label>
+            <input matInput formControlName="syncCurpInterval" type="number">
+          </mat-form-field>
+          <mat-slide-toggle formControlName="enableSyncCurpInterval">Activar</mat-slide-toggle>
+        </div>
+
+        <!-- Intervalo monitor -->
+        <div class="form__row__item">
+          <mat-form-field appearance="fill" class="w-full">
+            <mat-label>Intervalo monitor</mat-label>
+            <input matInput formControlName="syncMonitorInterval" type="number">
+          </mat-form-field>
+          <mat-slide-toggle formControlName="enableSyncMonitorInterval">Activar</mat-slide-toggle>
+        </div>
+
+        <!-- Intervalo asistencias -->
+        <div class="form__row__item">
+          <mat-form-field appearance="fill" class="w-full">
+            <mat-label>Intervalo asistencias</mat-label>
+            <input matInput formControlName="syncAsistenciaInterval" type="number">
+          </mat-form-field>
+          <mat-slide-toggle formControlName="enableSyncAsistenciaInterval">Activar</mat-slide-toggle>
+        </div>
+
+        <!-- Intervalo digitalizar archivos -->
+        <div class="form__row__item">
+          <mat-form-field appearance="fill" class="w-full">
+            <mat-label>Intervalo digitalizar archivos</mat-label>
+            <input matInput formControlName="syncArchivosDigitalizadosInterval" type="number">
+          </mat-form-field>
+          <mat-slide-toggle formControlName="enableSyncArchivosDigitalizadosInterval">Activar</mat-slide-toggle>
+        </div>
+
+        <!-- Intervalo cargar archivos pendientes -->
+        <div class="form__row__item">
+          <mat-form-field appearance="fill" class="w-full">
+            <mat-label>Intervalo cargar archivos pendientes</mat-label>
+            <input matInput formControlName="syncCargarArchivosPendientes" type="number">
+          </mat-form-field>
+          <mat-slide-toggle formControlName="enableSyncCargarArchivosPendientes">Activar</mat-slide-toggle>
+        </div>
+      </div>
+
+      <div>
+        <button mat-raised-button color="primary" (click)="onSubmit()">
+          <mat-icon aria-hidden="false" aria-label="Guardar configuración" fontIcon="save"></mat-icon>
+          Guardar
         </button>
-
       </div>
     </form>
-  </div>
-</div>
+  </section>
+</main>
