--- a/src/app/pages/configuraciones/configuraciones.component.scss
+++ b/src/app/pages/configuraciones/configuraciones.component.scss
@@ -1,22 +1,46 @@
-@use '@angular/material' as mat;
-
-h2 {
-  color: var(--primary-color);
+.main {
+  max-width: 90%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
-:root {
-  @include mat.select-overrides((
-    panel-background-color: orange,
-    enabled-trigger-text-color: red,
-  ));
+.form {
+  display: flex;
+  flex-direction: column;
+  row-gap: 1rem;
+
+  &__row {
+    display: flex;
+    flex-direction: column;
+    row-gap: 1rem;
+
+    &__item {
+      min-width: 300px;
+
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: flex-start;
+      column-gap: 1rem;
+    }
+  }
 }
 
-// Ajustar ancho y alto del select
-.mat-mdc-form-field {
-  // width: 300px;
-}
+@media (min-width: 1024px) {
+  .form {
 
-.mat-mdc-select {
-  height: 15px;
-  line-height: 15px;
+    &__row {
+      flex-direction: row;
+      justify-content: flex-start;
+      column-gap: 1rem;
+      flex-wrap: wrap;
+    }
+
+    &__row--short {
+      flex-direction: row;
+      justify-content: flex-start;
+      column-gap: 1rem;
+    }
+  }
 }
