--- a/src/app/pages/home/components/datos-generales/datos-generales.component.html
+++ b/src/app/pages/home/components/datos-generales/datos-generales.component.html
@@ -39,10 +39,10 @@
 
       <div class="flex flex-row gap-2">
         <mat-form-field class="basis-2/3">
-          <mat-label>Nombres:</mat-label>
-          <input matInput formControlName="nombres" maxlength="200" (input)="toUpperCaseName($event)">
-          <mat-error *ngIf="isValidField('nombres')" class="text-red-500">
-            {{ getFieldError("nombres") }}
+          <mat-label>Nombre:</mat-label>
+          <input matInput formControlName="nombre" maxlength="200" (input)="toUpperCaseName($event)">
+          <mat-error *ngIf="isValidField('nombre')" class="text-red-500">
+            {{ getFieldError("nombre") }}
           </mat-error>
         </mat-form-field>
         <mat-form-field class="basis-2/3">
@@ -59,6 +59,9 @@
             {{ getFieldError("apellido_materno") }}
           </mat-error>
         </mat-form-field>
+      </div>
+
+      <div class="flex flex-row gap-2">
         <mat-form-field class="basis-1/3">
           <mat-label>Fecha de nacimiento</mat-label>
           <input matInput [matDatepicker]="picker" formControlName="fecha_nacimiento">
@@ -66,10 +69,8 @@
           <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
           <mat-datepicker #picker></mat-datepicker>
         </mat-form-field>
-      </div>
 
-      <div class="flex flex-row gap-2">
-        <mat-form-field class="basis-1/2">
+        <mat-form-field class="basis-1/3">
           <mat-label>Telefono</mat-label>
           <span matTextPrefix>+52 &nbsp;</span>
           <input type="tel" matInput formControlName="telefono" placeholder="333-555-1234" maxlength="10">
@@ -81,7 +82,7 @@
           }
         </mat-form-field>
 
-        <mat-form-field class="basis-1/2">
+        <mat-form-field class="basis-1/3">
           <mat-label>Correo Electronico</mat-label>
           <input type="email" matInput formControlName="email" placeholder="Ej. usuario@ejemplo.com">
           @if( isValidField('email') ) {
