--- a/src/app/pages/impresionManual/impresionManual.component.scss
+++ b/src/app/pages/impresionManual/impresionManual.component.scss
@@ -13,9 +13,13 @@
   margin: 3rem auto;
 }
 
-.card {
+.card,
+.card--seleccionar {
   width: 100%;
   aspect-ratio: 1.586;
+}
+
+.card {
   background-color: #f68e3a;
   color: #fff;
   border-radius: 6px;
@@ -78,6 +82,12 @@
       width: 100%;
     }
   }
+}
+
+.card--seleccionar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .camara {
