--- a/src/app/pages/configuraciones/configuraciones.component.html
+++ b/src/app/pages/configuraciones/configuraciones.component.html
@@ -18,6 +18,15 @@
           <mat-slide-toggle formControlName="enableSyncInterval">Activar</mat-slide-toggle>
         </div>
 
+        <!-- Intervalo aspirantes -->
+        <div class="form__row__item">
+          <mat-form-field appearance="fill" class="w-full">
+            <mat-label>Intervalo aspirantes</mat-label>
+            <input matInput formControlName="syncAspirantesInterval" type="number">
+          </mat-form-field>
+          <mat-slide-toggle formControlName="enableSyncAspirantesInterval">Activar</mat-slide-toggle>
+        </div>
+
         <!-- Intervalo CURP -->
         <div class="form__row__item">
           <mat-form-field appearance="fill" class="w-full">
