--- a/src/app/pages/consulta/consulta.component.html
+++ b/src/app/pages/consulta/consulta.component.html
@@ -73,6 +73,13 @@
       </div>
 
       <div class="flex justify-start items-center gap-5">
+        <button (click)="syncAspirantesBeneficio()"
+          class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded flex justify-between items-center gap-2"
+          >
+          <mat-icon matSuffix>sync</mat-icon>
+          <span>Sincronizar aspirantes</span>
+        </button>
+
         <button (click)="formConsulta.reset()"
           class="bg-gray-500 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded flex items-center justify-between gap-2"
           [disabled]="!generado || loading">
